# pdm-plugin-i

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
src/pdm_plugin_i/: __init__.py  command.py
tests/: conftest.py  test_plugin.py
