[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pdm-plugin-i"
description = "A PDM plugin that make `pdm i` as alias of `pdm install`"
authors = [{name = "Waket Zheng", email = "waketzheng@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[dependency-groups]
dev = ["pytest>=8.3.3", "pdm>=2.20.0", "ruff>=0.7.1", "click>=8.1.7", "mypy>=1.13.0"]

[project.urls]
Repository = "https://github.com/waketzheng/pdm-plugin-i"
Homepage = "https://github.com/waketzheng/pdm-plugin-i"

[project.entry-points.pdm]
pdm-plugin-i = "pdm_plugin_i:plugin"

[tool.pdm]
version = { source = "file", path = "src/pdm_plugin_i/__init__.py" }
distribution = true
plugins = [
    "-e file:///${PROJECT_ROOT}"
]

[tool.pdm.build]
package-dir = "src"

[tool.pdm.scripts]
deps = "pdm install --plugins"
lock = "pdm lock --group :all --strategy inherit_metadata"
test = "pytest tests/"
format = "ruff format ."
style = "ruff check --extend-select=I,B,SIM --fix ."
type_hint = "mypy ."
lint = {composite = ["format", "style", "type_hint"]}

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning"
]
